--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "angular-material": "^1.0.7",
     "angular-material-icons": "^0.7.0",
     "angular-messages": "^1.5.3",
-    "angular-route": "^1.5.3"
+    "angular-route": "^1.5.3",
+    "angular-ui-router": "^0.2.18"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
